Optimize image sizes
By using JRE instead of the full SDK.